fixed nav bar hover, size, color, alignment and font

--- a/gregslist_5.6/main.css
+++ b/gregslist_5.6/main.css
@@ -1,13 +1,13 @@
-body*{
+body *{
 	box-sizing: border-box;
 }
 
 /*navbar*/
 nav{
 	position: fixed;
-	background: gray;
+	background: #DCDCDC;
 	width: 100%;
-	height: 50px;
+	height: 40px;
 	z-index: 999;
 	top: 0;
 	left: 0;
@@ -15,24 +15,24 @@ nav{
 
 h1{
 	display: inline-block;
-	position: relative;
-	top: -10px;
-	left: 10px;
-	/*font-size: 10px;*/
+	font-size: 16px;
+	padding: 10px;
+	margin: 0px;
 }
 
 .nav-links{
 	display: inline-block;
 	position: absolute;
-	top: 0px;
-	right: 20px;	
+	right: 10px;
+	margin: 0px;
+	padding: 10px;	
 	list-style: none;
 	
 }
 
 .nav-links li{
 	display: inline-block;
-	font-size: 20px;
+	font-size: 16px;
 }
 
 .nav-links li a{
@@ -40,7 +40,7 @@ h1{
 	margin-right: 10px;
 }
 
-a:hover{
+li:hover a{
 	color: red;
 }
 
@@ -50,17 +50,18 @@ main{
 
 .button{
 	width: 40px;
-	position: relative;
-	top: 10px;
-/*	margin-top: 20px;*/
+	vertical-align: middle;
+	border: 1px solid gray;
+	border-radius: 5px;
 }
 
 .search{
 	height: 40px;
 	width: 400px;
 	border: 1px solid gray;
-	position: relative;
 	padding: 10px;
+	vertical-align: middle;
+	border-radius: 5px;
 }
 
 .search-field{
@@ -69,5 +70,8 @@ main{
 
 .result-links li{
 	display: inline-block;
-	position: relative;
+	border: 1px solid gray;
+	padding: 10px;
+	margin-right: -5px
+	border-radius: 30px;
 }
